--- a/style.css
+++ b/style.css
@@ -1,22 +1,46 @@
-h1 {
-    text-align: center;
+
+* {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    background-color: rgb(195, 222, 136);
 }
 
-li {
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+h1 {
+    margin-top: 0px;
+    text-align: center;
+    background-color: rgb(195, 222, 136);
+    border-bottom: black solid 5px;
+    border-left: 0px;
+    border-right: 0px;
+    border-top: 0px;
 }
 
 h3 {
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     background-color: rgb(237, 255, 193);
 }
 
-p {
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
+a {
+    font-size: larger;
+    margin: 30px;
+    text-decoration: none;
+    background-color: rgb(167, 215, 94);
+    padding: 1em 2em;
+    color: black;
+    border-radius: 25px;
+    border: rgb(0, 0, 0) solid 5px;
+    text-align: center;
+    display:block;
 }
 
-.homelist {
-    font-size: larger;
+a:hover {
+    background-color: rgba(167, 215, 94, 0.685);
+}
+
+.greeting {
+    margin-top: 40px;
+    text-align: center;
+}
+
+img {
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
 }
